<resources>
    <string name="title_upload_id_document">Upload ID Document</string>
    <string name="upload_photo_of_your_document">Please upload photo of your travel document.</string>
    <string name="following_item_must_be_clearly_visible">The following items must be clearly visible</string>
    <string name="list_of_document_id">. face photo\n. name\n. address\n. date of birth\n. date of expiry</string>
    <string name="face_photo">face photo</string>
    <string name="terms_and_conditions_description">The software you are about to use functions as a free, and open source.\n\nWhile the software has undergone beta testing and continues to be improved by feedback from the open-source user and developer community, we cannot guarantee that there will be no bugs in the software. You acknowledge that your use of this software is at your own discretion and in compliance with all applicable laws. You are responsible for safekeeping your passwords, and any other codes you use to access the software.\n\nTo the fullest extent permitted by law, this software is provided as is and no representations or warranties can be made of any kind, express or implied, including but not limited to the warranties of merchantability, fitness or a particular purpose and noninfringement. You assume any and all risks associated with the use of the software. In no event shall the authors of the software, employees and affiliates of Truong Thanh JAPAN, copyright holders, or Truong Thanh JAPAN, Co,.Ltd. be held liable for any claim, damages or other liability, whether in an action of contract, tort, or otherwise, arising from, out of or in connection with the software. We reserve the right to modify this disclaimer from time to time.</string>
    <string name="select_term_and_conditions">I agree with </string>
    <string name="terms_and_conditions"><u>terms and conditions</u></string>
    <string name="close">Close</string>
    <string name="tutorial_welcome">Welcome</string>
    <string name="tutorial_start">start</string>
    <string name="tutorial_form_submit">send</string>
    <string name="tutorial_form_desc">* Provide your email address to activate your account.\n* Once you submit this form, then we will send you a confirmation email.</string>
    <string name="tutorial_verification_code_desc">* Provide verification code which was sent by email.</string>
    <string name="tutorial_password_on_import_desc">* Provide password which was sent  by email when you created an account on the first time.</string>
    <string name="tutorial_end_desc">Your account has been activated.\nPlease enjoy!</string>
    <string name="app_start">start</string>
    <string name="point_name">POINT</string>
    <string name="coin_name">COIN</string>
    <string name="email_address">Email address</string>
    <string name="first_name">First name</string>
    <string name="middle_name">Middle name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cell_phone_number">Cell phone number</string>
    <string name="dob">Date of birth</string>
    <string name="qr_code">QR Code</string>
    <string name="complete">Complete</string>
    <string name="transaction_type">send/receive</string>
    <string name="transaction_status">status</string>
    <string name="tab">tab</string>
    <string name="verification_code">code</string>
    <string name="password_on_import">password</string>
    <string name="not_set">Not set</string>
    <string name="error_dialog_title">ERROR</string>
    <string name="no_transaction_data">There is no transaction data.</string>
    <string name="set_amount_desc">set amount</string>
    <string name="hint_receive_amount">amount</string>
    <string name="hint_send_amount">amount</string>
    <string name="send_by_qr">Scan Code</string>
    <string name="send_by_email">By Email Address</string>
    <string name="send_email_form_desc">* Provide email address you want to send point/coin to.</string>
    <string name="send_successfully_executed">The payment has been submitted.\nPlease wait a moment until the transaction be processed.</string>
    <string name="profile_successfully_updated">Your profile has been updated successfully.</string>
    <string name="push_notification">Push Notification</string>
    <string name="email_notification">Email Notification</string>
    <string name="upload_your_id_document">Upload Your ID Document</string>
    <string name="under_review_for_id_document">Under review for ID Document</string>
    <string name="id_document_was_approved">ID Document was approved</string>
    <string name="message_note_disabled_send_for_id">You cannot use this function until your ID is verified.</string>
    <string name="message_note_upload_id_for_disabling_edit_profile">Once you upload images, you will not be able to edit your profile.</string>
    <string name="successfully_uploaded">Successfully uploaded</string>
    <string name="national_code_should_be">National code should be 81(Japan) or 84(Vietnam).</string>
    <string name="please_select_gender">Please select gender.</string>
    <string name="default_dob">01/Jan/1990</string>
    <string name="address_place_holder">House No, Street No, City, Country, Postal Code</string>
    <string name="dot">•</string>
    <string name="privacy_policy"><b>Privacy Policy</b></string>
    <string name="privacy_policy_description">
        \nThis Privacy Policy describes the ways in which we (TTJ Co.,Ltd., inclusive of subsidiaries) collect, use, disclose and protect personal information.
        \n\nPrivacy Policy applies to information that we collect when you access or use TTJ’s website or mobile apps (collectively, “SENtoken Project Services”) or otherwise interact with us as described below.
    </string>
    <string name="collection_of_information"><b>\nCollection of information</b>
        <b>\n\nInformation provided from you</b>
        \n\nWe collect information that are directly provided from you. We collect information when you make an online account, complete a transaction, fill out a form, respond to surveys, post a message on our forum or otherwise communicate with us.
        <b>\n\nThe types of information we may collect</b>
    </string>
    <string name="the_types_of_information_we_may_collect_one">Contact information: such as your name, mailing address, phone number, email address.</string>
    <string name="the_types_of_information_we_may_collect_two">Financial information: such as bank account numbers, credit card numbers and cryptor currency account information.</string>
    <string name="the_types_of_information_we_may_collect_three">Government issued ID number: driver’s license or passport information.</string>
    <string name="the_types_of_information_we_may_collect_four">Biographic or demographic information : such as your date of birth, gender, occupation, employment status.</string>
    <string name="collection_of_information_one">
        <b>\nInformation we collect from other sources</b>
        \n\nWe may collect information from other sources and combine that with information collected through the SENtoken Project Services.
        \ne.g. We collect your nonpublic personal information from third parties including identity verification services.
        \n\n<b>Information We collect automatically</b>
        \n\nWe collect information automatically when you visit or use the SENtoken Project Services.
    </string>
    <string name="information_we_collect_automatically_one">
        <b>Transaction information</b> : we collect information about the transaction you complete via the SENtoken Project Services, including the amount of funds associated with a trade, the types of trades executed and other transaction information.
    </string>
    <string name="information_we_collect_automatically_two">
        <b>Location information</b> :  With your prior consent, we may collect precise geolocation information from your mobile device when you visit or use our mobile app. Please refer to “Your Choice” below for more information.
    </string>
    <string name="information_we_collect_automatically_three">
        <b>Transaction information</b> : We collect information about the computer or mobile device you use to access the SENtoken Project Services, including device identifiers, mobile network information, type of operating system, and the type of browser used. We also log information about your use of the SENtoken Project Services, including access times, pages viewed, IP address, other standard web log data, and the page visited before and after navigating to our websites.
    </string>
    <string name="information_we_collect_automatically_four">
        <b>Cookie and similar tracking technologies</b> : We may use cookies or other tracking technologies to collect information about you when you visit the SENtoken Project Services including information of your browsing behavior. Cookies are small data files transferred from our web servers to your computer or mobile device that enable us to, for example, capture how you arrived at the SENtoken Project Services, when you return, which pages on the SENtoken Project Services you visit, and to recognize that you are already logged on when we receive a page request from your browser.
    </string>
    <string name="collection_of_information_two">
        <b>\nUse of information</b>
        \n\nWe may use your information in the following ways:
    </string>
    <string name="user_of_information_one">Provide the SENtoken Project Services and customer support;</string>
    <string name="user_of_information_two">Process transactions and send notices about your transactions;</string>
    <string name="user_of_information_three">Manage your account(s) and send technical notices, updates, security alerts and support and administrative messages;</string>
    <string name="user_of_information_four">Resolve disputes, collect fees, and troubleshoot problems;</string>
    <string name="user_of_information_five">Prevent potentially prohibited or illegal activities and enforce our user agreements;</string>
    <string name="user_of_information_six">Personalize, measure and improve the SENtoken Project Services;</string>
    <string name="user_of_information_seven">Deliver marketing and promotional offers on behalf of SENtoken and others, including via SMS, voice calls or email;</string>
    <string name="user_of_information_eight">Link or combine your personal information with information we obtain from others to help understand your needs and provide you with better service;</string>
    <string name="user_of_information_nine">Carry out any other purpose for which the information was collected, to the extent such purpose is necessarily contemplated by the collection of such information or as otherwise notified in the SENtoken Project Services at the time of collection.</string>
    <string name="collection_of_information_three">
        <b>\nDisclosure of information</b>
        \n\nWe may disclose any information we collect about you including nonpublic information and other information we collect to nonaffiliated third parties, whether you are currently our customer or was our customer in the past. We may make such disclosures:
    </string>
    <string name="disclosure_number_one">(1) To service providers that perform marketing services on our behalf;</string>
    <string name="disclosure_number_two">(2) For our everyday business purposes, such as to process transactions, maintain accounts, respond to court orders and legal investigations or report to credit bureaus.</string>
    <string name="default_positive_button_text">OK</string>
    <string name="default_cancel_button_text">Cancel</string>
    <string name="save_button_text">Save</string>
</resources>