<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_tutorial_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            app:errorEnabled="true"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_tutorial_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_verification_code_desc"
            android:textColor="@color/colorSecondaryText" />

        <LinearLayout
            android:id="@+id/layout_password_on_import"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_tutorial_password_on_import"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/middle_margin"
                android:hint="@string/password_on_import"
                app:errorEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_tutorial_password_on_import"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/middle_margin"
                android:text="@string/tutorial_password_on_import_desc"
                android:textColor="@color/colorSecondaryText" />
        </LinearLayout>

        <Button
            android:id="@+id/button_tutorial_verification_code_submit"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_primary"
            android:text="@string/tutorial_form_submit"
            android:textColor="@color/colorTextOnPrimary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>