<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/large_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/large_margin"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_str_account_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stellar_address">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_str_account_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/memo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_memo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radio_group_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/middle_margin"
        android:layout_marginTop="@dimen/middle_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_send_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/point_name" />

        <RadioButton
            android:id="@+id/radio_send_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:text="@string/coin_name" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_send_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_send_amount"
        app:errorEnabled="true"
        app:hintEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_send_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/middle_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_send_amount_cancel"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/middle_margin"
            android:layout_weight="1"
            android:background="@color/colorCancel"
            android:text="@string/default_cancel_button_text"
            android:textColor="@color/colorPrimaryText" />

        <Button
            android:id="@+id/button_send_amount_submit"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/middle_margin"
            android:layout_weight="1"
            android:background="@drawable/button_primary"
            android:text="@string/default_positive_button_text"
            android:textColor="@color/colorTextOnPrimary" />
    </LinearLayout>

</LinearLayout>